# agent-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  TASK_SPLIT.md  create_shortcut.ps1  docker-compose.yml  eval_report_ds.json  eval_report_qwen35.json  locustfile.py  mkdocs.yml  pyproject.toml  pytest.ini  render.yaml  run_cs_demo.py  start_lingshu.bat  start_prod.py  start_server.bat  test_citations.py  test_debug.py  开启手机预览.bat  灵枢AI.url
.github/workflows/: android-apk.yml  ci.yml  docs.yml
.hermes/plans/: 2026-07-11_030000-D+E.md  2026-07-11_140000-I+J.md
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
docs/: api.md  architecture.md  configuration.md  cs-demo.md  demo-guide.md  index.md  load-test-report.md  quickstart.md
scripts/: boss_api_greet.py  boss_auto_greet.py  boss_auto_greet.sh  boss_reply_server.py  build_cs_demo_exe.py  build_exe.py  create-app.py  create_shortcut.bat  create_shortcut.ps1  cs_demo_launcher.py  launcher.py  lingShu.spec  lingShu_launcher.py  mock_llm.py  start.bat  start_all.py  start_boss_greet.sh  start_lingShu.bat  sync-version.py
scripts/cs_demo/: __init__.py  __main__.py  server.py
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/cs-demo/: index.html
site/quickstart/: index.html
src/agent_harness/: __init__.py  agent_cron.py  agent_log.py  main.py  (+11 more)
tests/: conftest.py  test_api.py  test_cs_intents.py  test_cs_stream.py  test_llm_cache.py  test_report_citations.py  test_search_chain.py
wechat-mp/: TASK_SPLIT.md  app.js
(+118 files in other folders)
