[project]
name = "agent-harness"
version = "0.38.0"
description = "LangGraph-based multi-agent orchestration framework with MCP tool ecosystem"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kisaragiy", email = "taqibala@outlook.com"},
]
keywords = ["langgraph", "agent", "mcp", "llm", "ai", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "chromadb>=0.5.0",
    "numpy>=1.24.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "rich>=13.0",
]

[project.optional-dependencies]
desktop = [
    "pyautogui>=0.9.54",
    "playwright>=1.45.0",
    "Pillow>=10.0",
    "opencv-python>=4.9.0",
    "mss>=9.0.0",
    "dxcam>=0.0.4",
]
comfyui = [
    "Pillow>=10.0",
    "requests>=2.32.0",
]
all = [
    "agent-harness[desktop,comfyui]",
]

[project.scripts]
agent-harness = "agent_harness.run:main"
agent-mcp = "agent_harness.mcp_server:main"
agent-api = "agent_harness.api_fastapi:main"
agent-comic = "agent_harness.run:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
